# RetrieverEvalKit

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.py
config/: config.yaml
docs/: dev.md  faiss_benchmark.md  flickr30k_demo.md  index.md  inquire_siglip.md
docs/guides/: ann_evaluation.md  development_workflow.md
docs/reference/: architecture.md  evaluation.md  pipelines.md  publishing.md
docs/tutorials/: flickr30k_streamlit.md  inquire_siglip_pipeline.md
img_search/config/: config.yaml  embed_config.yaml  embed_text_config.yaml
img_search/data/: __init__.py  captions.py  dataset.py  embeddings.py  flickr30k.py  inquire.py
img_search/database/: embeddings.py  images.py
img_search/embedding/: __init__.py  encoder.py  jina_v4.py  jina_v4_vllm.py  siglip.py  siglip2.py  siglip_vllm.py
img_search/frontend/: __init__.py  flickr30k_demo.py
img_search/pipeline/: embed.py  embed_text.py  upload_to_hub.py
img_search/proto/: embed_result.py
img_search/search/: __init__.py  evaluate.py  faiss_search.py  hnswlib_search.py  scann_search.py
img_search/utils/: logging.py
img_serach/embedding/: __init__.py  encoder.py  siglip2.py
scripts/: run_search_eval.py  upload_to_hub.py
scripts/prepare_data/: convert_inquire_to_hf.py  embed_inquire_queries.py  extract_tiny.py  flickr.py  flickr30k_fix.py  preview.ipynb
tests/data/: test_dataset.py  test_embeddings.py  test_inquire.py
tests/database/: test_embedding_database.py  test_image_database.py
tests/embedding/: jina.py  siglip2.py  test_jina.py  test_siglip.py  test_siglip2.py
(+34 files in other folders)
