[project]
name = "img_search"
version = "0.1.0"
description = "Image search engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "hydra-core>=1.3.2",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
