[project]
name = "img_search"
version = "0.1.0"
description = "Image search engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
